# cairn

./: .cairnignore  .cflx.jsonc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  PROGRESS.md  README.md  START-HERE.md  autoresearch.sh  biome.json  cairn.blueprint  infographic.html  map.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.agents/: .skill-lock.json
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  manifest
.beads/hooks/: pre-commit
.claude/: settings.json  settings.local.json
.claude/commands/: auto-pr.md  cairn-loop.md
.claude/skills/: README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  dogfood.yml  pages.yml
.orchestrator/: phases-6-9-scope.md
.sauron/webui-v2-screenshots/: 00-shell.html  01-graph-api.json  02-node-reconciler.json  03-dependents-reconciler.json  04-blueprint.json  VERIFICATION.md
adapters/gascity/: README.md  pack.toml
archive/strongholds/: cairn-domain-expandability.md  cairn-oax-skill-promotion-eval.md  docs-staleness-audit.md  getcairn-cross-check-7.5c.md  getcairn-cross-check-B.md  getcairn-cross-check-F.md  getcairn-learnings-candidates.md  getcairn-refined-batch-A.md  getcairn-roadmap-debate.md  graphify-version-audit.md  next-phase-plan.md  oq1-reconciliation-validate.md  oq4-phase9-rescope-timing.md  palantir-saruman-phase-defense.md  palantir-sauron-phase-critique.md  pr-bundle-recon.md  tdd-posture-investigation.md  war-log.jsonl
cairn-macros/: Cargo.toml  README.md
cairn-macros/src/: lib.rs
cairn-macros/tests/: planned_attribute.rs
docs/: agent-prompts.md  artefacts.md  blueprint.md  brownfield.md  changes.md  claude-code.md  commands.md  conventions.md  dsl.md  hooks.md  index.html  integration-contract.md  mcp.md  phase-2-deferrals.md  quickstart.md  robots.txt  session-handoff-2026-04-17-evening.md  spec.md  summariser.md  testing.md
docs/agent/: cairn-dev-workflow.md  graphite.md  principles.md  voice.md
docs/design-system/: NEXT_SESSION.md  README.md  components.css  copy.toml  fonts.css  index.html  tokens.css
docs/landing/: index.html
docs/registries/: declared-items.md  error-codes.md  spec-rules.md
docs/research/: tui-graph-viewer.md
docs/strongholds/: cairn-domain-expandability.md  context-snapshot.md  docs-staleness-audit.md  drift-investigation.md  external-cairn-docs-research.md  getcairn-adoption-matrix.md  getcairn-cross-check-A.md  getcairn-cross-check-C.md  getcairn-cross-check-E.md  getcairn-cross-check-integrated.md  getcairn-refined-batch-B.md  getcairn-refined-batch-C.md  getcairn-refined-batch-D.md  image-batch-inventory.md  oq2-edge-label-render.md  oq3-genesis-lifecycle.md  palantir-saruman-phase-defense.md  palantir-sauron-phase-critique.md  pr-bundle-recon.md  pr22-saruman-defense.md  pr22-sauron-critique.md  (+3 more)
files/: README.md
harness/: capture-fixtures.mjs  eval.mjs  server.mjs
harness-output/: critique-0.md  critique-1.md  critique-2.md  design-description-1.md  design-description-2.md  design-description-3.md  scores.json  spec.md  sprint-contract.md
meta/: session-handoff.md  ui-contract.md
openspec/: config.yaml  conventions.md
scripts/: auto-pr.sh  cairn-hook-all.sh  cflx-analyze-cairn-phases.py  check-a11y.sh  check-design-tokens.sh  check-file-sizes.sh  dogfood.sh  install-pre-commit-hook.sh  pre-archive-rust-gates.sh  record-webui-demo.mjs
src/: changes.rs  copy.rs  error.rs  index.ts  lib.rs  main.rs  mcp.rs  query_api.rs  report.rs  signal.rs  sse.rs  ui.rs  verification.rs  watch.rs
test/: self-hosting.test.ts
tests/: artefacts_contract.rs  artefacts_frontmatter.rs  blueprint_lexer.rs  blueprint_parser.rs  change_format.rs  changes.rs  check_a11y.rs  check_design_tokens.rs  check_file_sizes.rs  command_reference_consistency.rs  conventions.rs  decision_claims.rs  dogfood_gate.rs  fixtures_smoke.rs  gitignore_lint.rs  graph_explorer.rs  hooks_architecture.rs  kernel.rs  landing_assets.rs  mcp.rs  phase_10_distribution.rs  phase_7_6_ai_provenance.rs  phase_7_7_ux_foundation.rs  phase_7_8_cairn_export.rs  phase_8_summariser.rs  phase_9_brownfield.rs  reconcile_go.rs  reconcile_python.rs  reconcile_rust.rs  reconcile_target_fingerprint.rs  reconcile_typescript.rs  scanner_interface_hash.rs  test_cflx_analyze_cairn_phases.py  ui_mobile.rs  watch.rs  wire_format_snapshots.rs
(+861 files in other folders)
