[workspace]
members = ["."]
resolver = "3"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
cargo = { level = "deny" }
dbg_macro = { level = "deny" }
todo = { level = "deny" }

[package]
name = "cairn"
version = "0.1.0"
edition = "2024"
description = "Foundation package for the Cairn architecture graph tool."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://example.invalid/cairn"
keywords = ["architecture", "graph", "dsl", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "cairn"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
