[workspace]
members = [".", "cairn-macros"]
resolver = "2"

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
cargo = { level = "deny" }
dbg_macro = { level = "deny" }
todo = { level = "deny" }

[package]
name = "cairn"
version = "0.1.0"
edition = "2021"
description = "Foundation package for the Cairn architecture graph tool."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cairn-framework/cairn"
homepage = "https://github.com/cairn-framework/cairn"
keywords = ["architecture", "graph", "blueprint", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "cairn"
path = "src/main.rs"

[[bin]]
name = "cairn-mcp"
path = "src/bin/cairn-mcp.rs"

[lints]
workspace = true

[dependencies]
cairn-macros = { path = "cairn-macros" }
ctrlc = "3.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml"] }
tempfile = "3"
