[workspace]
members = [".", "cairn-macros"]
resolver = "3"

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[workspace.lints.rust]
missing_docs = "deny"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
cargo = { level = "deny" }
dbg_macro = { level = "deny" }
todo = { level = "deny" }

[package]
name = "cairn"
version = "0.1.0"
edition = "2024"
description = "Foundation package for the Cairn architecture graph tool."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cairn-framework/cairn"
homepage = "https://github.com/cairn-framework/cairn"
keywords = ["architecture", "graph", "blueprint", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "cairn"
path = "src/main.rs"

[[bin]]
name = "cairn-mcp"
path = "src/bin/cairn-mcp.rs"

[[bin]]
name = "cairn-lsp"
path = "src/bin/cairn-lsp.rs"

[lints]
workspace = true

[dependencies]
cairn-macros = { path = "cairn-macros" }
signal-hook = { version = "0.3", default-features = false, features = ["extended-siginfo-raw"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
serde_yaml = "0.9.34"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"

[dev-dependencies]
insta = { version = "1", features = ["json", "yaml", "redactions"] }
tempfile = "3"